testdata/invalid/semantic/duplicate_name.pact
// Duplicate component name
component User {
	id: string
}

component User {
	name: string
}
